# codal-nrf52

./: .project  CMakeLists.txt
asm/: CortexContextSwitch.s
inc/: DMASerial.h  NRF52ADC.h  NRF52I2C.h  NRF52Microphone.h  NRF52PDM.h  NRF52PWM.h  NRF52Pin.h  NRF52QSPI.h  NRF52Radio.h  NRF52SPI.h  NRF52Serial.h  NRF52Timer.h  NRF52TouchSensor.h  NRFLowLevelTimer.h  NRFPPI.h  WS2812B.h  ZDMASerial.h  ZSingleWireSerial.h  neopixel.h  nrfx_glue.h  peripheral_alloc.h  sync_serial.h
inc/toolchain/: nrf51.h  nrf52.h  nrf_delay.h  nrf_drv_spi.h
nrfx_mods/: README.md
nrfx_mods/mdk/: gcc_startup_nrf52833.S
source/: DMASerial.cpp  NRF52ADC.cpp  NRF52I2C.cpp  NRF52Microphone.cpp  NRF52Neopixel.cpp  NRF52PDM.cpp  NRF52PWM.cpp  NRF52Pin.cpp  NRF52QSPI.cpp  NRF52Radio.cpp  NRF52RadioDatagram.cpp  NRF52SPI.cpp  NRF52Serial.cpp  NRF52Timer.cpp  NRF52TouchSensor.cpp  NRF52USB.cpp  NRFLowLevelTimer.cpp  NRFPPI.cpp  WS2812B.cpp  ZDMASerial.cpp  ZSingleWireSerial.cpp  codal_target_hal_base.cpp  neopixel.cpp  nrf_delay.c  peripheral_alloc.cpp  reloc_vector_table.c  sync_serial.cpp  system_nrf52.c
